--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="icon" href="favicon.ico">
 	<link rel="prefetch" href="data.json">
+	<link rel="prefetch" href="i18n.json">
 	<link rel="stylesheet" href="styles.css">
 	<script defer src="build.js"></script>
 	<script async src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
