--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<script defer src="build.js"></script>
 	<script async src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
+	<script async src="stats.js"></script>
 </head>
 <body>
 	<header>
