--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link rel="prefetch" href="i18n.json">
 	<link rel="stylesheet" href="styles.css">
 	<script defer src="build.js"></script>
-	<script async src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
+	<script async src="fontawesome/fontawesome.min.js"></script>
+	<script async src="fontawesome/solid.min.js"></script>
 	<script async src="stats.js"></script>
 </head>
 <body>
