Preload critical resources

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>The Menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="icon" href="favicon.ico">
+	<link rel="preload" href="data.json" as="fetch">
+	<link rel="preload" href="i18n.json" as="fetch">
 	<link rel="stylesheet" href="styles.css">
 	<script defer src="build.js"></script>
 	<script async src="fontawesome/fontawesome.min.js"></script>
