--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script defer src="build.js"></script>
 	<script async src="fontawesome/fontawesome.min.js"></script>
 	<script async src="fontawesome/solid.min.js"></script>
-	<script async src="https://luiscastro193.github.io/stats.js"></script>
+	<script type="module" async src="https://luiscastro193.github.io/stats.js"></script>
 	<link rel="preload" href="data.json" as="fetch" crossorigin>
 	<link rel="preload" href="i18n.json" as="fetch" crossorigin>
 </head>
